Fixed help links for #242, also repaired #248 and #223